--- a/style.css
+++ b/style.css
@@ -2,9 +2,60 @@
   
    
 body{
-  background-color: #1c1c1c;
+  padding:10px;
+  background-color: white;
 }     
-        
+
+.loader_bg{
+  position: fixed;
+  z-index: 9999999;
+  background: #ffffff;
+  width: 100%;
+  height: 100%;
+  
+}
+    
+.loader{
+  border: 0 solid transparent;
+  border-radius: 50%;
+  height: 150px;
+  width: 150px;
+  position: absolute;
+  top: calc(50vh - 75px);
+  left: calc(50vh - 75px);
+  
+}
+.loader:before, .loader:after{
+  content:'';
+  
+  width: inherit;
+  height: inherit;
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation: loader 10s linear infinite;
+  opacity: 0;
+}
+
+.loader:before{
+  animation-delay: 0s;
+}
+@keyframes loader{
+  0%{
+    transform: scale(0);
+    opacity: 0
+  }
+
+  50%{
+    opacity: 1;
+  }
+  100%{
+    transform: scale(1);
+    opacity: 0;
+  }
+}
+
+
 .mgtitle{
   position: absolute;
   text-align: center;
@@ -21,85 +72,71 @@ background-size: 200rem;
    
 }
 
-.mgtitle :hover {
-  
+
+
+.container{
+  top:10em;
+  max-width: 3600px;
+  max-height: 3600px;
+  margin:auto;
+  background: :#f2f2f2;
+  overflow:auto;
 }
 
-@keyframes position
-  {
-    0% { margin-left: 50px; background-color: transparent
-    color: black;}
-  50% { margin-left: 0px; background-color:transparent; 
-  color: white}
-  100% { margin-left: 50px; background-color: transparent;
-    color: black; }
-    
+.gallery{
+  margin:145px;
+  border:145px solid white;
+  float:left;
+  widows: 490px;
 }
-.HA{
-  position: absolute;
+
+.gallery img{
+  width:30%;
+  height:auto;
+  padding: 30px;
+
+}
+
+.desc{
+  padding:10px;
   text-align: center;
-  font-size: 60pt;
-background-size:contain;
-  top:50%;
-  left:61%;
-  height: 200px;
-  width:200px;
-  animation-duration:1s;
-  animation-name:position2;
-  animation-timing-function: step-end;
-  animation-iteration-count: infinite;
-   
 }
-@keyframes position2
-  {
-    0% { margin-left: 0px; background-color: transparent
-    color: black;}
-  50% { margin-left: 50px; background-color:transparent; 
-  color: white}
-  100% { margin-left: 0px; background-color: transparent;
-    color: black; }
-    
-}
-
 
         .outline0{
          font-size: 30px;
+         font-weight: 200;
+         color: black;
         display: flex;
-        font-family: 'Montserrat', sans-serif;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
          position:relative;
-         top: 2em;
-         left: 10em;
+         top: 1em;
+         left: 30em;
          
        }
 
-       .outline0 :hover{
-         color: rgb(255, 199, 45);
+       .outline1{
+        font-size: 10px;
+        font-weight: 200;
+        color: gray;
+       display: flex;
+     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        position:relative;
+        top: 3em;
+        left: 90em;
         
+      }
 
-        } 
-
-        .outline1{
       
-          display: flex;
-          font-family: 'Montserrat', sans-serif;
-           position:relative;
-           top: 1.5em;
-           left: 68em;
-           
-         }
   
-         .outline1 :hover{
-           color: rgb(255, 199, 45);
-          
-  
-          } 
+         
 
        .outline2 {
         display: flex;
-        font-family: 'Montserrat', sans-serif;
+        color: gray;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         position: relative;
         top: 0.3em;
-        left: 78em;
+        left: 98em;
       }
 
       .outline2 :hover{
@@ -109,10 +146,11 @@ background-size:contain;
 
       .outline3 {
         display: flex;
-        font-family: 'Montserrat', sans-serif;
+        color: gray;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         position: relative;
         bottom: 1.0em;
-        left: 88.5em;
+        left: 109.5em;
       }
 
       .outline3 :hover{
@@ -122,10 +160,11 @@ background-size:contain;
 
       .outline4 {
         display: flex;
-        font-family: 'Montserrat', sans-serif;
+        color: gray;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         position: relative;
         bottom: 2.3em;
-        left: 101em;
+        left: 123em;
       }
       
       .outline4 :hover{
@@ -135,10 +174,11 @@ background-size:contain;
 
       .outline5 {
         display: flex;
-        font-family: 'Montserrat', sans-serif;
+        color: gray;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         position: relative;
         bottom: 3.6em;
-        left: 111em;
+        left: 135em;
       }
       
       .outline5 :hover{
@@ -181,11 +221,32 @@ background-size:contain;
 
       }
 
+      .ending{ 
+       
+       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: gray;
+       text-align: right;
+       bottom: 10em;
+       right:32em;
+       position: relative;
+        
+        font-size: 15px;
+        
+
+      }
+
+      .introduce{
+        position: relative;
+        top: 27em;
+        
+
+      }
+
       .whoiam1{
         display: flex;
        
         justify-content:center;
-        font-family: 'Montserrat', sans-serif;
+       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         color: gray;
         position: relative;
         bottom: 27em;
@@ -202,7 +263,7 @@ background-size:contain;
         display: flex;
        
         justify-content:center;
-        font-family: 'Montserrat', sans-serif;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         color: gray;
         position: relative;
         bottom: 26.9em;
@@ -219,7 +280,7 @@ background-size:contain;
         display: flex;
        
         justify-content:center;
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         color: gray;
         position: relative;
         bottom: 26.8em;
@@ -232,14 +293,31 @@ background-size:contain;
         
       }
      
+      .whoiam4{
+        display: flex;
+       
+        justify-content:center;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        color: black;
+        position: relative;
+        bottom: 9em;
+       
+        font-size: 30px;
+        animation-duration:1s;
+        animation-name:color;
+        animation-timing-function: ease;
+        animation-iteration-count: infinite;
+        
+      }
     
       }
        
        h1 {
+         text-align: left;
+        max-width: 200px;
         
-         display:inline-block
          color:orange;
-          font-size: 50px;
+          font-size: 10px;
           font-weight: 200;
           font-family: 'Montserrat', sans-serif;
           text-align: center;
@@ -250,18 +328,15 @@ background-size:contain;
           display: inline;
           
           font-family: 'Montserrat', sans-serif;
-            color: orange;
-            font-size: 45px;
+            color: gray;
+            font-size: 15px;
             font-weight: 200;
             font-family: 'Montserrat', sans-serif;
           }
 
         
 
-        .mainimage {
-          
-          background-color: black;
-        }
+     
         
        
          .vimeo {
@@ -311,17 +386,22 @@ background-size:contain;
           display: inline;
         }
      .mainimage {
-       size: 100em;
-      display: flex;
-      top:5em;
-      justify-content:center;
+       position: relative;
+       
+       left:45em;
+       width:100%;
+     
+      
+      
      }
+
+     
     
      @media only screen and (min-width: 500px) and (max-width: 1200px) {
       
        
-      .vimeo{
-        width: 600px;
+      .container{
+       
              
          }
          .outline{
@@ -329,13 +409,7 @@ background-size:contain;
            font-size: 1.2rem;
              
          }
-         .mainimage{
-          width: 600px;
-        
-          
-     
-             
-         }
+       
          .chinese{
          
            font-size: 1.2rem;
